# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  audit.yml  general.yml  spec.yml
.github/workflows/: audit.yml  general.yml
migrations/: 20240219172023_create_subscriptions_table.sql
scripts/: docker_build.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
